--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
+ipdb = "^0.13.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
