--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 SQLAlchemy = "^1.4.41"
 requests = "^2.28.1"
 httpx = "^0.23.0"
+pycryptodome = "^3.15.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
