--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ SQLAlchemy = "^1.4.41"
 requests = "^2.28.1"
 httpx = "^0.23.0"
 pycryptodome = "^3.15.0"
+colorama = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
